# practice-pytorch

./: README.md  pyproject.toml
src/practice_pytorch/: 0-1.ipynb  0-3.ipynb  0-4.ipynb  0-5.ipynb  0-6.ipynb  0-6.py  __init__.py
