[project]
name = "practice-pytorch"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "hiroaki222", email = "hiroaki.takahara.222@gmail.com" }
]
dependencies = [
    "matplotlib>=3.9.0",
    "torch>=2.3.1",
    "numpy>=1.26.4",
    "ipykernel>=6.29.4",
    "torchvision>=0.18.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/practice_pytorch"]
